--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.18.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0",
